Sun May 28 16:24:24 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Valuetype/ValueBase.cpp:
          Add explicit dereferences where the ValueFactory_var is used in
          equality tests.

Sun May 28 15:18:19 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Log_i.cpp:

          Removed unused LogRecord variable in write_recordlist().  This
          avoids its construction and destruction in the write hot path.

Sat May 27 22:00:08 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Log_i.cpp:

          Don't invoke reset_capacity_thresholds() if no log records were
          actually removed.

Fri May 26 22:09:09 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Valuetype/ValueBase.cpp:
          Fixed a memory leak introduced by the refactoring of
          _tao_unmarshal_pre. The ValueFactory reference was moved into
          the unmarshal_pre method directly, and in doing so inadvertently
          got its _var status stripped.

Fri May 26 11:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Runtime_Scheduler.cpp:
        * orbsvcs/orbsvcs/Sched/Reconfig_Scheduler_T.cpp:
          Applied workarounds for BCB2006 and BCB6 in release mode, the
          code results in the original form in an internal backend
          error, reported this to Borland as QC27961.

Thu May 25 23:12:56 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TAO_Internal.cpp:

          Fixed logic in open_services() to eliminate an unused local
          variable warning (which happened when the TAO debug level
          was less than 3) and made many cosmetic changes to the
          whole file to bring the code into line with the ACE
          style guidelines.

Thu May 25 03:27:44 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/OctetSeqC.h:
        * tao/OctetSeqC.cpp:
        * tao/diffs/OctetSeq.diff: